test_programs/compile_failure/noirc_frontend_tests_traits_suggests_importing_trait_via_reexport/src/main.nr

    mod one {
        mod two {
            pub trait Trait {
                fn method(self);
            }

            impl Trait for bool {
                fn method(self) {}
            }
        }

        pub use two::Trait;
    }

    fn main() {
        true.method()
    }
    